--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Short stories'
 - !lcsh 'Science fiction'
+- GITenberg
 title: The Glory of Ippling
 url: http://www.gutenberg.org/ebooks/23185
